-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.12.0-beta1
-
None
-
e46df080ee68c2be7b5abe8bb30ae615c333aa27 (qt-creator/qt-creator/4.12)
After trying to import an existing build, and noticing it for some reason didn't bave "shadow build" enabled, I clicked the checkbox and qt-creator crashed:
Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault. QFutureWatcherBase::cancel (this=0x0) at /src/qt5/qtbase/src/corelib/thread/qfuturewatcher.cpp:133 133 futureInterface().cancel(); (gdb) bt #0 QFutureWatcherBase::cancel (this=0x0) at /src/qt5/qtbase/src/corelib/thread/qfuturewatcher.cpp:133 #1 0x00007fffcba8d8eb in QmakeProjectManager::QmakeProFile::~QmakeProFile (this=0x7fffafbe6c40, __in_chrg=<optimized out>) at qmakeparsernodes.cpp:1206 #2 0x00007fffcba8daa9 in QmakeProjectManager::QmakeProFile::~QmakeProFile (this=0x7fffafbe6c40, __in_chrg=<optimized out>) at qmakeparsernodes.cpp:1203 #3 0x00007fffcba8c9ce in qDeleteAll<QList<QmakeProjectManager::QmakePriFile*>::const_iterator> (end=..., begin=...) at /opt/qt-5.14/include/QtCore/qalgorithms.h:319 #4 qDeleteAll<QList<QmakeProjectManager::QmakePriFile*> > (c=...) at /opt/qt-5.14/include/QtCore/qalgorithms.h:328 #5 QmakeProjectManager::Internal::QmakeEvalResult::~QmakeEvalResult (this=0x7fffacc8b030, __in_chrg=<optimized out>) at qmakeparsernodes.cpp:151 #6 QScopedPointerDeleter<QmakeProjectManager::Internal::QmakeEvalResult>::cleanup (pointer=0x7fffacc8b030) at /opt/qt-5.14/include/QtCore/qscopedpointer.h:60 #7 QScopedPointer<QmakeProjectManager::Internal::QmakeEvalResult, QScopedPointerDeleter<QmakeProjectManager::Internal::QmakeEvalResult> >::~QScopedPointer ( this=<synthetic pointer>, __in_chrg=<optimized out>) at /opt/qt-5.14/include/QtCore/qscopedpointer.h:107 #8 QmakeProjectManager::QmakeProFile::applyEvaluate (this=0x7fff54ad07e0, evalResult=0x7fffacc8b030) at qmakeparsernodes.cpp:1674 #9 0x00007fffcba8d872 in QmakeProjectManager::QmakeProFile::applyAsyncEvaluate (this=0x7fff54ad07e0) at /usr/include/c++/9/bits/std_mutex.h:164 #10 0x00007ffff6ba9922 in QtPrivate::QSlotObjectBase::call (a=0x7fffffffd360, r=0x7ffdd5e1eac0, this=0x55557cda9f70) at ../../include/QtCore/../../../../qt5/qtbase/src/corelib/kernel/qobjectdefs_impl.h:394 #11 doActivate<false> (sender=0x7ffdd5e1eac0, signal_index=4, argv=0x7fffffffd360) at /src/qt5/qtbase/src/corelib/kernel/qobject.cpp:3870 #12 0x00007ffff6ba452f in QMetaObject::activate (sender=<optimized out>, m=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at /src/qt5/qtbase/src/corelib/kernel/qobject.cpp:3930 #13 0x00007ffff69b8fe5 in QFutureWatcherBase::event (this=<optimized out>, event=0x55558697f4e0) at /src/qt5/qtbase/src/corelib/thread/qfuturewatcher.cpp:334 #14 0x00007ffff77e262f in QApplicationPrivate::notify_helper (this=this@entry=0x5555555a22e0, receiver=receiver@entry=0x7ffdd5e1eac0, e=e@entry=0x55558697f4e0) at /src/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3685 #15 0x00007ffff77eb2a0 in QApplication::notify (this=0x7fffffffda90, receiver=0x7ffdd5e1eac0, e=0x55558697f4e0) at /src/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3431 #16 0x00007ffff6b76628 in QCoreApplication::notifyInternal2 (receiver=0x7ffdd5e1eac0, event=0x55558697f4e0) at ../../include/QtCore/../../../../qt5/qtbase/src/corelib/kernel/qobject.h:153 #17 0x00007ffff6b78e33 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55555559cc80) at /src/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1832 #18 0x00007ffff6bcb133 in postEventSourceDispatch (s=0x55555561d710) at /src/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:277 #19 0x00007ffff53b5ead in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #20 0x00007ffff53b6130 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #21 0x00007ffff53b61bf in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0 #22 0x00007ffff6bca7fd in QEventDispatcherGlib::processEvents (this=0x55555562f2a0, flags=...) at /src/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423 #23 0x00007ffff6b7533b in QEventLoop::exec (this=this@entry=0x7fffffffd860, flags=..., flags@entry=...) at ../../include/QtCore/../../../../qt5/qtbase/src/corelib/global/qflags.h:136 #24 0x00007ffff6b7cf5e in QCoreApplication::exec () at ../../include/QtCore/../../../../qt5/qtbase/src/corelib/global/qflags.h:118 #25 0x00007ffff71228ac in QGuiApplication::exec () at /src/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:1866 #26 0x00007ffff77e25a5 in QApplication::exec () at /src/qt5/qtbase/src/widgets/kernel/qapplication.cpp:2825 #27 0x000055555555f724 in main (argc=<optimized out>, argv=<optimized out>) at main.cpp:700
For Gerrit Dashboard: QTCREATORBUG-23596 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
290314,2 | QmakeProjectManager: Fix null pointer access | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |