QmakeProjectManager: Fix null pointer access

Amends c7d8b9b01c.

Fixes: QTCREATORBUG-23596
Change-Id: I466907e02572008d0e677ff29ecd712969f8bc54
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: hjk <hjk@qt.io>