src/plugins/qmakeprojectmanager/qmakeparsernodes.cpp
@@ -1203,12 +1203,13 @@ QmakeProFile::QmakeProFile(const FilePath &filePath) : QmakePriFile(filePath) { 
 QmakeProFile::~QmakeProFile()
 {
     qDeleteAll(m_extraCompilers);
-    m_parseFutureWatcher->cancel();
-    m_parseFutureWatcher->waitForFinished();
-    if (m_readerExact)
-        applyAsyncEvaluate();
-    delete m_parseFutureWatcher;
-
+    if (m_parseFutureWatcher) {
+        m_parseFutureWatcher->cancel();
+        m_parseFutureWatcher->waitForFinished();
+        if (m_readerExact)
+            applyAsyncEvaluate();
+        delete m_parseFutureWatcher;
+    }
     cleanupProFileReaders();
 }
 
